Fixed spacing

--- a/src/ui/main/main.scss
+++ b/src/ui/main/main.scss
@@ -1,8 +1,8 @@
 @import '_colors.scss';
 
 ::-webkit-scrollbar {
-  width: 1em;
-  height: 1em;
+  width: .5em;
+  height: .5em;
 
   &-track {
     background: $bg-main;
