--- a/src/ui/modules/FileViewer/FileViewer.scss
+++ b/src/ui/modules/FileViewer/FileViewer.scss
@@ -27,7 +27,7 @@
   background: $bg-content;
   font-family: "Fira Sans Extra Condensed", sans-serif;
   padding: 2em;
-  gap: 0.75em;
+  gap: .3em;
 }
 
 .file-content {
